2008-11-??  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
	
	* using CDI library version 1.2.1
	* New operator: gengrid - generate grid [request: Michael Boettinger]
	* New operator: pow - Power [request: Gil Lizcano]
	* Module Timstat: use taxis with bounds from input [request: Beate Geyer]
	* sellonlatbox: add support for grid units 'radians' [request: Jeff Daily]
	* sellonlatbox: add support for GRID_CELL [request: Jeff Daily]
	* Add option '-u' to determinate whether to overwrite existing files [request: David Wang]
	* cat, copy: compare input files
	* zonvar: activation missing (bug fix) [report: Irene Fischer-Bruns]
	* detrend: change taxisCreate to taxisDuplicate [report: Ute Merkel]
	* remapdis: add support for GRID_CELL without bounds (full grid search)
	* remapbil: bug fix for cross_product eq zero
	* sethalo: bug fix for x/y bounds [report: Helmut Haak]
	* ifthen:  bug fix for datasets with different missing values [report: Beate Geyer]
	* runmean: bug fix for datasets with missing values [report: Carmen Ulmen]
	* namelist: bug fix for wrong input
	* Version 1.2.1 released

2008-08-13  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.2.0
	* add support for netCDF4 classic with deflate option (option -z zip)
	* Arith: add filltype FILL_FILE [request: Rita Seiffert]
	* New operator: intlevel - Linear level interpolation
	* New operator: invertlev - Invert levels [request: Marco Giorgetta]
	* New operator: sellevidx - Select levels by index [request: David Wang]
	* New module: Pressure (fpressure, hpressure) [request: Jan Kazir]
	* New module: Tests (normal, studentt, chisquare, beta, fisher)
	* New module: Echam5ini (read_e5ml, write_e5ml)
	* New operator: import_amsr to read AMSR binary files
	* New operator: vertwind (testversion) [request: Michael Boettinger]
	* New operator: ml2pl_lp (testversion) [request: Hui Wan]
	* remapdis: check that distance is inside the range of -1 to 1 [report: Hui Wan]