@@ -151,7 +151,7 @@
 \end{picture}
 
 \begin{flushright}
-\large\bf{Climate Data Operators \\ Version 1.2.0 \\ August 2008}
+\large\bf{Climate Data Operators \\ Version 1.2.1 \\ November 2008}
 \end{flushright}
 
 \vfill
