@@ -10,7 +10,7 @@
 \put(0,0.0){\line(1,0){3.95}}
 \end{picture}
 \begin{flushright}
-{\small{Climate Data Operators \\ Version 1.2.0 \\ August 2008}}
+{\small{Climate Data Operators \\ Version 1.2.1 \\ November 2008}}
 \end{flushright}
 
 \vspace*{0mm}
